refactor: cleaning GlobalExceptionHandler responses